--- a/html.html
+++ b/html.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <body>
-    <link rel="stylesheet" type="text/css" href="https://mega.nz/file/0O5nXSyT#3QkTllsQTjl7LDitrusNJRHfUXm36OpM_8k18-PiXsw">
+    <link rel="stylesheet" type="text/css" href="https://github.com/3c2ba1/Wynncraft-Item-List/css.css">
     <div class="box">
         <ul>
             <li class="item-1">
