--- a/html.html
+++ b/html.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <body>
-    <link rel="stylesheet" type="text/css" href="css.css">
+    <link rel="stylesheet" type="text/css" href="3c2ba1/Wynncraft-Item-List/css.css">
     <div class="box">
         <ul>
             <li class="item-1">
