--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+    style="background-color:green;"
     <link rel="stylesheet" type="text/css" href="style.css">
     <div class="box">
         <ul>
