--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:#a7eb65;">
+<body style="background-color:#83c73c;">
     <link rel="stylesheet" type="text/css" href="style.css">
     <div class="box">
         <ul>
